--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   "homepage": "https://github.com/IHAVENOARMS/aun-back-end#readme",
   "dependencies": {
     "config": "^3.3.8",
+    "cors": "^2.8.5",
+    "countries-list": "^2.6.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.0",
     "joi": "^17.6.2",
+    "joi-objectid": "^4.0.2",
     "mongoose": "^6.6.5"
   }
 }
