--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
   },
   "homepage": "https://github.com/IHAVENOARMS/aun-back-end#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "config": "^3.3.8",
     "cors": "^2.8.5",
     "countries-list": "^2.6.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "generate-password": "^1.7.0",
     "helmet": "^6.0.0",
     "joi": "^17.6.2",
     "joi-objectid": "^4.0.2",
-    "mongoose": "^6.6.5"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.5",
+    "telegraf": "^4.10.0",
+    "underscore": "^1.13.6"
   }
 }
