--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
+    "moodle-user": "^1.0.1",
     "telegraf": "^4.10.0",
     "underscore": "^1.13.6"
   }
