--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "config": "^3.3.8",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "countries-list": "^2.6.1",
     "dotenv": "^16.0.3",
@@ -33,6 +34,7 @@
     "moodle-user": "^1.0.1",
     "pm2": "^5.2.2",
     "telegraf": "^4.10.0",
+    "tough-cookie": "^4.1.2",
     "underscore": "^1.13.6"
   }
 }
