--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "aun-back-end",
   "version": "1.0.0",
   "description": "Back end for assiut university management system",
+  "engines": {
+    "node": "16"
+  },
   "main": "index.js",
   "scripts": {
     "start": "pm2-runtime start ecosystem.config.js --env production",
